# frantic-search

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
frantic-cli/: Cargo.toml
frantic-cli/src/: main.rs
frantic-client/: Cargo.toml
frantic-client/src/: lib.rs
frantic-core/src/: cr.rs  lib.rs  parser.rs  search.rs
frantic-updater/: Cargo.toml
frantic-updater/src/: main.rs
frantic-web/: Cargo.toml  index.html  index.scss
frantic-web/src/: fetch_cr.rs  main.rs
src/: cr.rs  main.rs  parser.rs  search.rs
