[package]
name = "frantic-client"
version = "0.1.0"
edition = "2024"

[features]
writable = ["jsonwebtoken", "chrono/serde", "chrono/now"]

[dependencies]
jsonwebtoken = { version = "9", optional = true }
chrono = { version = "0.4.44", default-features = false }
serde = "1.0.228"

serde_json = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "form"] }
anyhow = "1.0.102"
frantic-core = { path = "../frantic-core" }
