[package]
name = "frantic-updater"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rules"
path = "src/main.rs"

[dependencies]
frantic-core = { path = "../frantic-core" }
frantic-client = { path = "../frantic-client", features = ["writable"] }
reqwest = "0.13.2"
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
time = "0.3.47"
