[package]
name = "frantic-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
frantic-client = { path = "../frantic-client" }
frantic-core = { path = "../frantic-core" }
gloo = "0.12.0"
js-sys = "0.3.94"
wasm-bindgen-futures = "0.4.67"
yew = { version = "0.23.0", features = ["csr"] }
