[package]
name = "frantic-web"
version = "0.1.0"
edition = "2024"

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
frantic-client = { path = "../frantic-client" }
frantic-core = { path = "../frantic-core" }
gloo = "0.12.0"
js-sys = "0.3.94"
wasm-bindgen-futures = "0.4.67"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Storage", "Window"] }
yew = { version = "0.23.0", features = ["csr"] }
